--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,7 @@
                         </div>
 
                         <div class="line3">
-                            and developers
+                            and developers.
                             <i class="fa-solid fa-hand-wave"></i>
                         </div>
                 </div>
